--- a/index.html
+++ b/index.html
@@ -15,17 +15,10 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
-<link rel="stylesheet" href="http://accurateit.solutions/main.css">
-<link rel="stylesheet" href="http://accurateit.solutions/mailer.php">
-<link rel="stylesheet" href="http://accurateit.solutions/form.php">
-<link ref="stylesheet" href="http://accurateit.solutions/style.css">
-<script src="accurateit.solutions/jquery-2.1.0.min.js"></script>
-<script src="accurateit.solutions/app.js"></script>
-
-<?php include('mailer.php') ?>
-
-<?php include('form.php') ?>
-
+<link rel="stylesheet" href="main.css">
+<link ref="stylesheet" href="style.css">
+<script src="jquery-2.1.0.min.js"></script>
+<script src="/app.js"></script>
 <style>
 /* Small devices (tablets, 768px and up) */
 /* For mobile phones: */
@@ -89,6 +82,10 @@ div {display:block;
 text-align:center;
 }
 
+body {
+    background-color:tan;
+    }
+
 </style>
 
 </head>
@@ -101,7 +98,7 @@ text-align:center;
 
 <ul class="pull left">
 
-<li><a href="https://Instant-Idiot-Just-add-alcohol.github.io">Home</a></li>
+<li><a href="https://Instant-Idiot-Just-add-alcohol.github.io/Instant-Idiot-Just-add-alcohol">Home</a></li>
 
 </ul>
 
@@ -119,13 +116,13 @@ text-align:center;
 
 <div class="thumbnail">
 
-<img src="images/sonnycarbo.jpg" >
+<img src="images/sonnycarbo.jpg" width="227" height="227" >
 
 </div>
 
 <h1>Instant Idiot: Just add alcohol</h1>
 
-<p>Alcohol can lessens one's inhibitions and can even make you do stupid things. Trust me, I know. I did a lot of them. YOu can read more about all of that in my new book "Instant Idiot: Just add Alcohol." YOu get to also see the good bumour shown throughout my book. that I can homestly say, without it, I wouldn't be here, today, sober. If you are depressed and are thinking about or are already doing drinking alcohol, please read my book to help you through it to a better place.</p>
+<p>Alcohol can lessens one's inhibitions and can even make you do stupid things. Trust me, I know. I did a lot of them. You can read more about all of that in my new book "Instant Idiot: Just add Alcohol." YOu get to also see the good bumour shown throughout my book. that I can homestly say, without it, I wouldn't be here, today, sober. If you are depressed and are thinking about or are already doing drinking alcohol, please read my book to help you through it to a better place.</p>
 
 </div>
 
