--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ body {
 
 <p>To aquire my book,</p>
 
-<p><a href="http://accurateit.solutions/Code_Analyzation.html">Enter Here</a></p>
+<p><a href="https://www.amazon.com/Instant-Idiot-Just-Add-Alcohol/dp/1628384743/ref=sr_1_1?s=books&ie=UTF8&qid=1529126694&sr=1-1&keywords=Instant+Idiot%3A+Just+add+alcohol">Go here</a>.</p>
 
 </div>
 
